--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-	"name": "qdb-api",
-	"description": "An API wrapper for Quote Database",
-	"version": "1.0.2",
-	"main": "src/qdb-api.js",
-	"author": "Mark Njung'e",
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/MarkNjunge/qdb-api"
-	},
-	"keywords": [
-		"bash",
-		"bash.org",
-		"quotes",
-		"quote database",
-		"irc",
-		"qdb",
-		"api",
-		"wrapper"
-	],
-	"contributors": [
-		{
-			"name": "Mark Njung'e",
-			"email": "mark.kamau@outlook.com",
-			"url": "marknkamau.com"
-		}
-	],
-	"dependencies": {
-		"axios": "^0.17.1",
-		"cheerio": "^1.0.0-rc.2"
-	}
+  "name": "qdb-api",
+  "description": "An API wrapper for qdb.us",
+  "version": "1.0.2",
+  "main": "src/qdb-api.js",
+  "author": "Mark Njung'e",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MarkNjunge/qdb-api"
+  },
+  "keywords": [
+    "bash",
+    "bash.org",
+    "quotes",
+    "quote database",
+    "irc",
+    "qdb",
+    "api",
+    "wrapper",
+    "qdb.us"
+  ],
+  "contributors": [
+    {
+      "name": "Mark Njung'e",
+      "email": "mark.kamau@outlook.com",
+      "url": "https://marknjunge.com/"
+    }
+  ],
+  "dependencies": {
+    "axios": "^0.17.1",
+    "cheerio": "^1.0.0-rc.2"
+  }
 }
